fix: result text overflow handling

--- a/style.css
+++ b/style.css
@@ -49,20 +49,19 @@ body{
 
 .root{
     background-color: var(--bg-root);
-    width: 100%;
-    max-width: fit-content;
+    width: min(100%, 21.25rem);
     margin: 0.5rem;
-    padding: 1.5rem;
+    padding: 1rem;
     border-radius: 16px;
     backdrop-filter: blur(5px);
 }
 
 .inputs-wrapper {
-    width: min(100%, 18.25rem);
+    width: 100%;
     height: 100%;
     display: grid;
     grid-template-rows: repeat(5, 4rem);
-    grid-template-columns: repeat(4, minmax(0, 4rem));
+    grid-template-columns: repeat(4, 1fr);
     gap: 0.75rem;
 }
 
@@ -81,9 +80,9 @@ body{
     flex-direction: column;
     gap: 0.5rem;
     word-wrap: break-word;
-    overflow-wrap: break-word; 
+    overflow-wrap: break-word;
 }
-
+    
 #secondary {
     font: var(--font-small);
     color: var(--text-muted);
